[workspace]
resolver = "2"
members = [
    "example",
    "crates/imx",
    "crates/imx_core",
    "crates/imx_file",
    "crates/imx_geo",
    "crates/imx_media",
    "crates/imx_rtc",
    "crates/serde_mt",
    "crates/with_crc",
    "crates/with_crc_derive",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
readme = "README.md"

[workspace.dependencies]
log = "0.4"
anyhow = "1"
thiserror = "1"
libc = "0.2"
#async-lock = "3.4"
async-channel = "2.3"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
bytes = { version = "1", features = ["serde"] }
byteorder = "1.5"
cipher = "0.4"
aes = "0.8"
ctr = "0.9"
rsa = "0.9"
rand = "0.8"
chrono = "0.4" # date time
crossbeam = "0.8"
dashmap = "5.5"
ahash = "0.8"
num = "0.4"
crc32fast = "1.4"
sha1 = "0.10"
sha2 = "0.10"
#rayon = "1.7"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
