[package]
name = "example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
imx = { path = "../crates/imx", features = ["tcp", "json"], default-features = false }
#imx = { path = "../crates/imx" }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
colored = "2"