[package]
name = "imx_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde_mt = { path = "../serde_mt", features = ["derive"], optional = true }
with_crc = { path = "../with_crc", features = ["derive"] }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
async-channel = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { version = "0.23", optional = true } # websocket
quinn = { version = "0.11", optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
serde_bytes = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
cipher = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
ahash = { workspace = true }
num = { workspace = true }
crc32fast = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }

[features]
tcp = []
quic = ["quinn"]
ws = ["tokio-tungstenite"]